--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,66 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   background: rgb(246, 246, 246);
   color: rgb(49, 45, 69);
   font-family: "Montserrat", sans-serif;
+  display: flex;
+  flex-direction: column;
+  /* box-sizing: border-box; */
+  /* padding: 0; */
 }
+
+#content {
+  display: flex;
+  flex: 1;
+  height: 100%;
+}
+
 .sideBar {
-  height: 95vh;
   width: 320px;
-  border-radius: 10px;
   background-color: white;
   padding: 10px 30px;
   display: flex;
   flex-direction: column;
+  overflow-y: auto; /* Enables scrolling for overflow content */
 }
-#content {
-  /* height: 100%;
-    width: 100%; */
-  display: flex;
-  align-items: center;
+
+.mainContent {
+  flex: 1;
+  margin: 30px;
+  color: rgb(144, 144, 144);
+  overflow-y: auto; /* Optional: enables scrolling for the main content */
 }
+
+.mainContent h5 {
+  font-weight: 300;
+  font-size: 14px;
+}
+
+#createTodoBtn {
+  width: 60px;
+  height: 60px;
+  border: none;
+  background-color: white;
+  border-radius: 100%;
+  color: rgb(197, 197, 197);
+  font-weight: 600;
+  font-size: large;
+  box-shadow: 0px 8px 15px -3px rgba(116, 116, 116, 0.1);
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+}
+
 li {
   list-style: none;
   margin: 15px 2px;
 }
+
 #newProjectBtn {
   border: none;
   font-size: medium;
@@ -29,8 +68,8 @@ li {
   padding: 6px 30px;
   border-radius: 5px;
   margin-top: auto;
-  
 }
+
 #modal {
   border: none;
   height: 380px;
@@ -39,20 +78,21 @@ li {
   color: rgb(49, 45, 69);
   line-height: 20px;
   padding: 15px 30px;
-  
 }
+
 #modal p {
   border: solid rgb(159, 156, 173) 1px;
   border-radius: 5px;
   padding: 0 15px;
   display: flex;
-
   align-items: center;
 }
+
 #modal label {
   width: 150px;
   color: rgb(159, 156, 173);
 }
+
 #modal input {
   width: 100%;
   height: 45px;
@@ -60,8 +100,13 @@ li {
   border-left: solid rgb(159, 156, 173) 1px;
   font-size: larger;
 }
+
 #modal input:focus {
   border: none;
+}
+::backdrop {
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
 }
 
 #createBtn {
@@ -73,6 +118,7 @@ li {
   color: rgb(174, 226, 169);
   font-size: medium;
 }
+
 #closeModalButton {
   /* font-size: larger; */
   border: solid rgb(255, 205, 205) 1px;
