--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,9 @@ body {
   color: rgb(144, 144, 144);
   overflow-y: auto; /* Optional: enables scrolling for the main content */
 }
-
+.mainContent h3 {
+  color: rgb(49, 45, 69);
+}
 .mainContent h5 {
   font-weight: 300;
   font-size: 14px;
@@ -72,12 +74,12 @@ li {
 
 #modal {
   border: none;
-  height: 380px;
+  /* height: 380px; */
   width: 550px;
   border-radius: 10px;
   color: rgb(49, 45, 69);
   line-height: 20px;
-  padding: 15px 30px;
+  padding: 35px 30px;
 }
 
 #modal p {
@@ -87,7 +89,9 @@ li {
   display: flex;
   align-items: center;
 }
-
+#modal h3 {
+  margin-top: 1px;
+}
 #modal label {
   width: 150px;
   color: rgb(159, 156, 173);
@@ -128,4 +132,11 @@ li {
   background-color: rgb(255, 233, 233);
   color: rgb(255, 205, 205);
   font-size: medium;
+}
+.todoItem{
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  font-weight: 500;
+  /* width: 50%; */
 }
